added auth0 to the project
